@@ -1,11 +1,12 @@
 package com.pluralsight.tacos.model;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class StreetTaco extends Taco{
     public StreetTaco() {
-        super(0.0, "3-taco" , "corn", false, Arrays.asList("carne asada", "onions", "salsa verde", "lime wedges"));
+        super(0.0, "3-taco" , "corn", false, new ArrayList<>(List.of("carne asada", "onions", "salsa verde", "lime wedges")));
     }
 
     @Override
